libreport_includedir = $(includedir)/libreport
libreport_include_HEADERS = \
    libreport_types.h \
    client.h \
    dump_dir.h \
    event_config.h \
    problem_data.h \
    report.h \
    run_event.h \
    libreport_curl.h \
    workflow.h \
    \
    config_item_info.h \
    file_obj.h \
    internal_libreport.h \
    internal_abrt_dbus.h \
    xml_parser.h
