libreport_includedir = $(includedir)/libreport
libreport_include_HEADERS = \
    libreport_types.h \
    client.h \
    dump_dir.h \
    event_config.h \
    problem_data.h \
    problem_report.h \
    report.h \
    run_event.h \
    libreport_curl.h \
    workflow.h \
    global_configuration.h \
    config_item_info.h \
    file_obj.h \
    internal_libreport.h \
    internal_abrt_dbus.h \
    xml_parser.h \
    reporters.h

if BUILD_UREPORT
libreport_include_HEADERS += ureport.h
endif
